Create input-bar of main

--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
     </head>
 
     <body>
-        <header>
+        <header id="main-header">
             <img src="./img/logo.png" alt="Boolean logo">
             <h1>Toboolist</h1>
         </header>
 
         <main>
+            <article class="container" id="first-block">
+                <div class="input-bar">
+                    <button id="task-button">Add Task</button>
+                    <button id="section-button">Add Section</button>
+                </div>
+            </article>
+
+            <article class="container" id="second-block">
+                
+            </article>
             
         </main>
 
