Add "New task" and "Today" section in main

--- a/index.html
+++ b/index.html
@@ -23,7 +23,31 @@
             </article>
 
             <article class="container" id="second-block">
-                
+                <section> <!--Next Task-->
+                    <h2> New Task</h2>
+                    <p><span class="check-green symbol">&#10004;</span> Quarterly Newsletter</p>
+                    <p class="editorial-tag tags">Editorial</p>
+                </section>
+
+                <section>
+                    <h2> Today</h2>
+                    <div>
+                        <p><span class="check-green symbol">&#10004;</span> Recruiting blog post</p>
+                        <p class="editorial-tag tags">Editorial</p>
+                    </div>
+                    <div>
+                        <p><span class="check-green symbol">&#10004;</span> Mobile app launch</p>
+                        <p class="goals-tag tags">Q1 Goals</p>
+                    </div>
+                    <div>
+                        <p><span class="cross-red symbol">&#10005;</span> Interview John H.</p>
+                        <p class="recruiting-tag tags">Recruiting</p>
+                    </div>
+                    <div>
+                        <p><span class="check-green symbol">&#10004;</span> Summit update to mobile storefronts</p>
+                        <p class="mobile-tag tags">Mobile</p>
+                    </div>
+                </section>
             </article>
             
         </main>
