Add "Upcoming" section and Fix main

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <p class="editorial-tag tags">Editorial</p>
                 </section>
 
-                <section>
+                <section> <!--Today-->
                     <h2> Today</h2>
                     <div>
                         <p><span class="check-green symbol">&#10004;</span> Recruiting blog post</p>
@@ -48,6 +48,26 @@
                         <p class="mobile-tag tags">Mobile</p>
                     </div>
                 </section>
+
+                <section> <!--Upcoming-->
+                    <h2> Upcoming</h2>
+                    <div>
+                        <p><span class="cross-red symbol">&#10005;</span> Schedule meeting with Alex</p>
+                    </div>
+                    <div>
+                        <p><span class="check-green symbol">&#10004;</span> Homepage refresh</p>
+                        <p class="website-tag tags">Website</p>
+                    </div>
+                    <div>
+                        <p><span class="check-green symbol">&#10004;</span> Onboard new Sales team members</p>
+                        <p class="sales-tag tags">Sales</p>
+                    </div>
+                    <div>
+                        <p><span class="check-green symbol">&#10004;</span> Review editorial calendar</p>
+                        <p class="editorial-tag tags">Editorial</p>
+                    </div>
+                </section>
+
             </article>
             
         </main>
