Fix main and css code

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     </head>
 
     <body>
-        <header id="main-header">
+        <header class="main-header"> <!--Logo and Title-->
             <img src="./img/logo.png" alt="Boolean logo">
             <h1>Toboolist</h1>
         </header>
 
-        <main>
+        <main> <!--Button bar-->
             <article class="container" id="first-block">
                 <div class="input-bar">
                     <button id="task-button">Add Task</button>
@@ -25,56 +25,57 @@
             <article class="container" id="second-block">
                 <section> <!--Next Task-->
                     <h2> New Task</h2>
-                    <p><span class="check-green symbol">&#10004;</span> Quarterly Newsletter</p>
-                    <p class="editorial-tag tags">Editorial</p>
+                    <ul>
+                        <li>
+                            <p><span class="check-green symbol">&#10004;</span> Quarterly Newsletter</p>
+                            <p class="editorial-tag tags">Editorial</p>
+                        </li>
+                    </ul>
                 </section>
 
                 <section> <!--Today-->
                     <h2> Today</h2>
-                    <div>
-                        <p><span class="check-green symbol">&#10004;</span> Recruiting blog post</p>
-                        <p class="editorial-tag tags">Editorial</p>
-                    </div>
-                    <div>
-                        <p><span class="check-green symbol">&#10004;</span> Mobile app launch</p>
-                        <p class="goals-tag tags">Q1 Goals</p>
-                    </div>
-                    <div>
-                        <p><span class="cross-red symbol">&#10005;</span> Interview John H.</p>
-                        <p class="recruiting-tag tags">Recruiting</p>
-                    </div>
-                    <div>
-                        <p><span class="check-green symbol">&#10004;</span> Summit update to mobile storefronts</p>
-                        <p class="mobile-tag tags">Mobile</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <p><span class="check-green symbol">&#10004;</span> Recruiting blog post</p>
+                            <p class="editorial-tag tags">Editorial</p>
+                        </li>
+                        <li>
+                            <p><span class="check-green symbol">&#10004;</span> Mobile app launch</p>
+                            <p class="goals-tag tags">Q1 Goals</p>
+                        </li>
+                        <li>
+                            <p><span class="cross-red symbol">&#10005;</span> Interview John H.</p>
+                            <p class="recruiting-tag tags">Recruiting</p>
+                        </li>
+                        <li>
+                            <p><span class="check-green symbol">&#10004;</span> Summit update to mobile storefronts</p>
+                            <p class="mobile-tag tags">Mobile</p>
+                        </li>
+                    </ul>
                 </section>
 
                 <section> <!--Upcoming-->
                     <h2> Upcoming</h2>
-                    <div>
-                        <p><span class="cross-red symbol">&#10005;</span> Schedule meeting with Alex</p>
-                    </div>
-                    <div>
-                        <p><span class="check-green symbol">&#10004;</span> Homepage refresh</p>
-                        <p class="website-tag tags">Website</p>
-                    </div>
-                    <div>
-                        <p><span class="check-green symbol">&#10004;</span> Onboard new Sales team members</p>
-                        <p class="sales-tag tags">Sales</p>
-                    </div>
-                    <div>
-                        <p><span class="check-green symbol">&#10004;</span> Review editorial calendar</p>
-                        <p class="editorial-tag tags">Editorial</p>
-                    </div>
+                    <ul>
+                        <li>
+                            <p><span class="cross-red symbol">&#10005;</span> Schedule meeting with Alex</p>
+                        </li>
+                        <li>
+                            <p><span class="check-green symbol">&#10004;</span> Homepage refresh</p>
+                            <p class="website-tag tags">Website</p>
+                        </li>
+                        <li>
+                            <p><span class="check-green symbol">&#10004;</span> Onboard new Sales team members</p>
+                            <p class="sales-tag tags">Sales</p>
+                        </li>
+                        <li>
+                            <p><span class="check-green symbol">&#10004;</span> Review editorial calendar</p>
+                            <p class="editorial-tag tags">Editorial</p>
+                        </li>
+                    </ul>
                 </section>
-
             </article>
-            
         </main>
-
-        <footer>
-
-        </footer>
-
     </body>
 </html>
