Add hover and background, Fix code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <section> <!--Next Task-->
                     <h2> New Task</h2>
                     <ul>
-                        <li>
+                        <li class="green-task">
                             <p><span class="check-green symbol">&#10004;</span> Quarterly Newsletter</p>
                             <p class="editorial-tag tags">Editorial</p>
                         </li>
@@ -36,19 +36,19 @@
                 <section> <!--Today-->
                     <h2> Today</h2>
                     <ul>
-                        <li>
+                        <li class="green-task">
                             <p><span class="check-green symbol">&#10004;</span> Recruiting blog post</p>
                             <p class="editorial-tag tags">Editorial</p>
                         </li>
-                        <li>
+                        <li class="green-task">
                             <p><span class="check-green symbol">&#10004;</span> Mobile app launch</p>
                             <p class="goals-tag tags">Q1 Goals</p>
                         </li>
-                        <li>
+                        <li class="red-task">
                             <p><span class="cross-red symbol">&#10005;</span> Interview John H.</p>
                             <p class="recruiting-tag tags">Recruiting</p>
                         </li>
-                        <li>
+                        <li class="green-task">
                             <p><span class="check-green symbol">&#10004;</span> Summit update to mobile storefronts</p>
                             <p class="mobile-tag tags">Mobile</p>
                         </li>
@@ -58,18 +58,18 @@
                 <section> <!--Upcoming-->
                     <h2> Upcoming</h2>
                     <ul>
-                        <li>
+                        <li class="red-task">
                             <p><span class="cross-red symbol">&#10005;</span> Schedule meeting with Alex</p>
                         </li>
-                        <li>
+                        <li class="green-task">
                             <p><span class="check-green symbol">&#10004;</span> Homepage refresh</p>
                             <p class="website-tag tags">Website</p>
                         </li>
-                        <li>
+                        <li class="green-task">
                             <p><span class="check-green symbol">&#10004;</span> Onboard new Sales team members</p>
                             <p class="sales-tag tags">Sales</p>
                         </li>
-                        <li>
+                        <li class="green-task">
                             <p><span class="check-green symbol">&#10004;</span> Review editorial calendar</p>
                             <p class="editorial-tag tags">Editorial</p>
                         </li>
